News UAT/force-app/main/default/objects/Project_Overview__c/Project_Overview__c.object-meta.xml
<CustomObject>
    <description>Project Overview</description>
    <label>Project Overview</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>