News UAT/force-app/main/default/objects/Project_Overview__c/fields/Burn_Report_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Burn_Report_Last_Update__c</fullName>
    <description>Date burn report was last updated</description>
    <inlineHelpText>Date burn report was last updated</inlineHelpText>
    <label>Burn Report - Last Update</label>
    <summarizedField>Burn_Report__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>