News UAT/force-app/main/default/objects/Project_Overview__c/fields/Diff_w_Budget__c.field-meta.xml
<CustomField>
    <fullName>Diff_w_Budget__c</fullName>
    <description>Total budget hrs - Total forecast hours</description>
    <formula>Total_Budget_Hours__c - Total_Forecast_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Negative value indicates the project is forecasted to be over budget</inlineHelpText>
    <label>Est. Diff w/ Budget</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>