News UAT/force-app/main/default/objects/Project_Overview__c/fields/Est_Hrs_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Est_Hrs_to_Complete__c</fullName>
    <description>Estimated hours left in the project</description>
    <inlineHelpText>Estimated hours left in the project</inlineHelpText>
    <label>Est. Hrs to Complete</label>
    <summarizedField>Burn_Report__c.Est_Hrs_to_Complete__c</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>