News UAT/force-app/main/default/objects/Project_Overview__c/fields/Forecast_Budget_Diff__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Budget_Diff__c</fullName>
    <description>Negative amt indicates OVER budget</description>
    <inlineHelpText>Negative amt indicates OVER budget</inlineHelpText>
    <label>Forecast Budget Diff</label>
    <summarizedField>Burn_Report__c.Diff_w_Budget_Dollars__c</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>