News UAT/force-app/main/default/objects/Project_Overview__c/fields/Forecast_Final_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Final_Dollars__c</fullName>
    <formula>Total_Assigned_Budget_c__c  + Management_Fee__c - Forecast_Budget_Diff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Final $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>