News UAT/force-app/main/default/objects/Project_Overview__c/fields/Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Go_Live__c</fullName>
    <description>Expected Go live date</description>
    <inlineHelpText>Expected Go live date</inlineHelpText>
    <label>Go Live</label>
    <type>Date</type>
</CustomField>