News UAT/force-app/main/default/objects/Project_Overview__c/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <description>For projects with mgt fee included - input TOTAL from the SOW estimate</description>
    <inlineHelpText>Estimated total fixed fee; used in forecast final $</inlineHelpText>
    <label>Management Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>