News UAT/force-app/main/default/objects/Project_Overview__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Oppty ID from the 62 Org</description>
    <inlineHelpText>Oppty ID from the 62 Org</inlineHelpText>
    <label>Opportunity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>