News UAT/force-app/main/default/objects/Project_Overview__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>Project reference identifier</description>
    <label>Project Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>