News UAT/force-app/main/default/objects/Project_Overview__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
                <default>true</default>
                <label>Plan</label>
            </value>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Design - High Level</fullName>
            </value>
            <value>
                <fullName>Design - Detailed Field Mapping</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Test - Unit Testing</fullName>
            </value>
            <value>
                <fullName>Test - Validation</fullName>
            </value>
            <value>
                <fullName>Deploy to Prod</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>