News UAT/force-app/main/default/objects/Project_Overview__c/fields/Total_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Hours__c</fullName>
    <label>Total Actual Hours</label>
    <summarizedField>Burn_Report__c.Actual_Hours_to_date__c</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>