News UAT/force-app/main/default/objects/Project_Overview__c/fields/Total_Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Budget__c</fullName>
    <description>Includes all PO&#39;s, CO&#39;s and Management Fees</description>
    <formula>Total_Assigned_Budget_c__c  +  Management_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes all PO&#39;s, CO&#39;s and Management Fees</inlineHelpText>
    <label>Total Approved Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>