News UAT/force-app/main/default/objects/Project_Overview__c/fields/Total_Assigned_Budget_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Assigned_Budget_c__c</fullName>
    <description>calculated from the Burn Report line items</description>
    <inlineHelpText>Total of approved budget $</inlineHelpText>
    <label>Total Assigned Budget - hrs</label>
    <summarizedField>Burn_Report__c.Approved_Budget__c</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>