News UAT/force-app/main/default/objects/Project_Overview__c/fields/Total_Forecast_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Hours__c</fullName>
    <label>Total Forecast Hours</label>
    <summarizedField>Burn_Report__c.Forecast_Final_Hours__c</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>