News UAT/force-app/main/default/objects/Project_Overview__c/fields/Total_to_date__c.field-meta.xml
<CustomField>
    <fullName>Total_to_date__c</fullName>
    <description>amount expended to date based on actual hours logged</description>
    <inlineHelpText>amount expended to date based on actual hours logged</inlineHelpText>
    <label>Total $ to date</label>
    <summarizedField>Burn_Report__c.Actual_dollars_to_date__c</summarizedField>
    <summaryForeignKey>Burn_Report__c.Project_Overview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>