News UAT/force-app/main/default/objects/Project_Overview__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <description>Rate how this project is doing overall as compared to last week</description>
    <inlineHelpText>Rate how this project is doing overall as compared to last week</inlineHelpText>
    <label>Trend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
                <default>true</default>
                <label>Stable</label>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>